Mode debug + ModBus

--- a/Software/Web/softplcui-main/softplcui-main/src/index.css
+++ b/Software/Web/softplcui-main/softplcui-main/src/index.css
@@ -291,6 +291,32 @@ input[type='number'] {
 /****/
 
 
+/** Panel Menu **/
+.menu-panel {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0px; /* espace horizontal entre les éléments */
+    padding: 4px 4px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 0px;
+    right: 4px;
+    left: max(140px, calc(100vw - 490px));
+    z-index: 1000;
+    flex-wrap: wrap; /* Évite le chevauchement en cas de petit écran */;
+}
+.react-flow__panel {
+    margin: 8px;
+}
+.color-picker {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
 
 /*Buttons*/
 .button {
@@ -419,3 +445,99 @@ legend {
     background-color: #E9C572; /* CFC9CE */
 
 }
+
+/*** tooggle ***/
+/* The switch - the box around the slider */
+.switch-container {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0px; /* Optionnel : espace en dessous */
+    margin-top: -15px;
+    right: 0px;
+    position: relative;
+}
+
+.switch-label {
+    font-size: 12px;
+    margin-bottom: 0px;
+    color: #333; /* Tu peux ajuster la couleur */
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 30px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 24px;
+    width: 24px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 30px;
+}
+
+
+/* animation edge */
+.slider.round:before {
+    border-radius: 50%;
+}
+
+@keyframes dash {
+    to {
+        stroke-dashoffset: -12;
+    }
+}
+
+.animated-edge {
+    stroke-dasharray: 8 4;
+    stroke-width: 2;
+    stroke: black;
+    animation: dash 1s linear infinite;
+}
+
+
