--- a/Software/Web/softplcui-main/softplcui-main/src/index.css
+++ b/Software/Web/softplcui-main/softplcui-main/src/index.css
@@ -36,14 +36,14 @@ body{
     /*background-color:#007aff*/;
 }
 .inputNode{
-    width: 200px;
-    height: 70px;
+    width: 180px;
+    height: 60px;
 }
 .inputNodeSelect {
     max-width: 180px;
 }
 .outputNode{
-    width: 200px;
+    width: 180px;
     height: 60px;
 }
 .outputNodeSelect {
@@ -303,7 +303,7 @@ input[type='number'] {
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     position: absolute;
-    top: 0px;
+    margin-top: 4px;
     right: 4px;
     left: max(140px, calc(100vw - 490px));
     z-index: 1000;
